src/components/roadmap/Roadmap.pcss
.roadmap {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	width: 100%;
	padding: var(--space-xl) var(--space-xxl) var(--space-xxxl) var(--space-xxl);
	gap: var(--space-xl);
}

.roadmap_title {
	font-family: var(--font-body-medium-family);
	font-size: 3rem;
	font-weight: 400;
	line-height: 3.5rem;
	color: var(--color-gray-light-700);
	letter-spacing: -0.96px;
}

.roadmap_content {
	display: flex;
	flex-direction: row;
	width: 100%;
	align-items: flex-start;
	gap: var(--space-xl);
}

.roadmap_description_container {
	display: flex;
	max-width: 436px;
	width: 100%;
	align-items: flex-start;
}

.roadmap_description {
	font-family: var(--font-body-medium-family);
	font-size: 1rem;
	font-weight: 300;
	line-height: 1.125rem;
	color: var(--color-gray-light-600);
}

.roadmap_items_container {
	display: flex;
	flex-direction: column;
	width: 100%;
	align-items: flex-start;
	gap: var(--space-l);
}

@media (min-width: 1025px) and (max-width: 1920px) {
	.roadmap_title {
		font-size: 2rem;
		line-height: 2.25rem;
	}

	.roadmap_description_container {
		max-width: 276px;
	}
}

@media (min-width: 641px) and (max-width: 1024px) {
	.roadmap_title {
		font-size: 2rem;
		line-height: 2.25rem;
	}

	.roadmap_content {
		flex-direction: column;
	}

	.roadmap_description_container {
		max-width: 316px;
	}
}

@media (max-width: 640px) {
	.roadmap {
		padding: var(--space-xl) var(--space-m) var(--space-xxxl) var(--space-m);
	}

	.roadmap_title {
		font-size: 2rem;
		line-height: 2.25rem;
	}

	.roadmap_content {
		flex-direction: column;
	}

	.roadmap_description_container {
		max-width: 343px;
		width: 100%;
	}
}

